# weather-pipeline

./: Dockerfile  README.md  docker-compose.yml  log.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: test.yml
src/: db.py  fetch_data.py  main.py
src/weather_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_db.py  test_fetch.py  test_insert.py
weather_pipeline.egg-info/: PKG-INFO  SOURCES.txt
